--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,10 @@ header
     box-shadow: var(--outer-shadow);
 }
 
+.inner-shadow {
+    box-shadow: var(--inner-shadow);
+}
+
 .hover-in-shadow {
     position: relative;
     z-index: 1;
@@ -111,7 +115,6 @@ header
     width: 100%;
     height: 100%;
     transition: all 0.3s ease;
-    border-radius: 50%;
 }
 
 .hover-in-shadow:hover:after {
@@ -166,4 +169,93 @@ header
 
 .header .hamburger-btn span::after {
     top: 6px;
+}
+
+
+/* -------------------
+NAVIGATION MENU
+-------------------
+
+ */
+
+.nav-menu {
+    position: fixed;
+    background-color: var(--bg-black-50);
+    padding: 0 15px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0;
+    visibility: hidden;
+    overflow-y: auto;
+}
+
+.nav-menu-inner {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.nav-menu ul {
+    padding: 15px;
+}
+
+.nav-menu ul li {
+    display: block;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.nav-menu ul li:last-child {
+    margin-bottom: 0px;
+}
+
+.nav-menu ul li a {
+    display: inline-block;
+    font-size: 28px;
+    font-weight: 600;
+    color: var(--text-black-700);
+    padding: 5px 30px;
+    border-radius: 30px;
+    transition: all 0.3s ease;
+}
+
+.nav-menu ul li a.active {
+    color: var(--skin-color);
+}
+
+.nav-menu ul li a::after {
+    border-radius: 30px;
+}
+
+.nav-menu .close-nav-menu {
+    height: 40px;
+    width: 40px;
+    display: block;
+    font-size: 35px;
+    line-height: 35px;
+    text-align: center;
+    border-radius: 50%;
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    cursor: pointer;
+    color: var(--text-black-600);
+    transition: all 0.3s ease;
+}
+
+.nav-menu .close-nav-menu::after {
+    border-radius: 50%;
+}
+
+.nav-menu .copyright-text {
+    position: absolute;
+    top: 50%;
+    left: -45px;
+    font-size: 15px;
+    color: var(--text-black-600);
+    transform: translateY(-50%) rotate(-90deg);
 }
