--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,31 @@ img {
     background-color: #4dd0e1;
 }
 
+.section-title {
+    padding: 0 15px;
+    flex: 0 0 100%;
+    max-width: 100%;
+    text-align: center;
+    margin-bottom: 60px;
+}
+
+.section-title h2 {
+    display: inline-block;
+    font-size: 30px;
+    font-weight: 700;
+    color: var(--text-black-900);
+    text-transform: uppercase;
+    margin: 0;
+}
+
+.section-title h2:before {
+    content: attr(data-heading);
+    display: block;
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--skin-color);
+}
+
 
 /* 
 header
@@ -448,4 +473,48 @@ HOME SECTION
     width: 100%;
     border-radius: 50%;
     border: 10px solid transparent;
+}
+
+
+/* ----------------------------
+ABOUT SECTION
+----------------------------*/
+
+.about-section {
+    padding: 80px 0 80px;
+    min-height: 100vh;
+}
+
+.about-section .about-img {
+    flex: 0 0 40%;
+    max-width: 40%;
+    padding: 0 15px;
+}
+
+.about-section .about-img .img-box {
+    border-radius: 5px;
+    padding: 15px;
+}
+
+.about-section .about-img .img-box img {
+    width: 100%;
+    border: 10px solid transparent;
+    border-radius: 5px;
+}
+
+.about-section .about-info {
+    flex: 0 0 60%;
+    max-width: 60%;
+    padding: 0 15px;
+}
+
+.about-section .about-info p {
+    font-size: 16px;
+    line-height: 26px;
+    margin-bottom: 15px;
+    color: var(--text-black-600);
+}
+
+.about-section .about-info span {
+    font-size: 600;
 }
